# multichain

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  go.mod  go.sum  multichain.go  multichain_suite_test.go  multichain_test.go  qtumtest.sh  test.sh
.github/: CODEOWNERS
.github/workflows/: build.yml  test.yml
api/account/: account.go
api/address/: address.go
api/contract/: contract.go
api/gas/: gas.go
api/utxo/: utxo.go
chain/acala/: acala.go  acala_suite_test.go  acala_test.go  address.go  address_test.go  contract.go  decode.go  mint_burn.go  mint_burn_test.go  ren_vm_bridge_types.go
chain/arbitrum/: address.go  address_test.go  client.go  encode.go  encode_test.go  gas.go  tx.go
chain/avalanche/: address.go  address_test.go  client.go  encode.go  encode_test.go  gas.go  tx.go
chain/bitcoin/: address.go  address_test.go  bitcoin.go  bitcoin_suite_test.go  bitcoin_test.go  gas.go  gas_test.go  utxo.go  utxo_test.go
chain/bitcoincash/: address.go  address_test.go  bitcoincash.go  bitcoincash_suite_test.go  bitcoincash_test.go  gas.go  gas_test.go  utxo.go  utxo_test.go
chain/bitcoinsv/: address.go  bitcoinsv.go  gas.go  utxo.go
chain/bitgesell/: address.go  address_test.go  bitgesell.go  bitgesell_suite_test.go  bitgesell_test.go  gas.go  gas_test.go  utxo.go
chain/solana/solana-ffi/rust/: Cargo.toml  build.rs  cbindgen.toml
chain/solana/solana-ffi/rust/src/: lib.rs  util.rs
docker/: docker-compose.env  docker-compose.yaml
infra/: .ci-env  .env  docker-compose.yaml
runtime/: runtime.go  runtime_suite_test.go  runtime_test.go
(+415 files in other folders)
