[package]
name = "solana-ffi"
version = "0.1.0"
authors = ["Rohit Narurkar <rohit.narurkar@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.58"
ren-bridge = { git = "https://github.com/renproject/ren-solana", branch = "feat/solana-program", features = ["no-entrypoint"] }
solana-client = "1.4.12"
solana-sdk = "1.4.12"
spl-token = { version = "3.0.0", features = ["no-entrypoint"] }

[build-dependencies]
cbindgen = "= 0.15.0"
