[package]
name = "solana-ffi"
version = "0.1.0"
authors = ["Rohit Narurkar <rohit.narurkar@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
arrayref = "0.3.6"
bincode = "1.3.1"
digest = "0.9.0"
libc = "0.2.58"
gateway = { git = "https://github.com/renproject/ren-solana", branch = "master", features = ["no-entrypoint"] }
renvm-sig = { git = "https://github.com/roynalnaruto/renvm-sig", branch = "master" }
sha3 = "0.9.1"
solana-client = "^1.5.0"
solana-sdk = "^1.5.0"
spl-associated-token-account = { version = "1.0.0", features = ["no-entrypoint"] }
spl-token = { version = "3.0.0", features = ["no-entrypoint"] }

[build-dependencies]
cbindgen = "= 0.15.0"
